<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Dialog</class>
 <widget class="QDialog" name="Dialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>400</width>
    <height>300</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <widget class="QCheckBox" name="chk_3">
   <property name="geometry">
    <rect>
     <x>50</x>
     <y>142</y>
     <width>95</width>
     <height>20</height>
    </rect>
   </property>
   <property name="text">
    <string>CheckBox3</string>
   </property>
  </widget>
  <widget class="QCheckBox" name="chk_2">
   <property name="geometry">
    <rect>
     <x>50</x>
     <y>121</y>
     <width>95</width>
     <height>20</height>
    </rect>
   </property>
   <property name="text">
    <string>CheckBox2</string>
   </property>
  </widget>
  <widget class="QCheckBox" name="chk_4">
   <property name="geometry">
    <rect>
     <x>50</x>
     <y>163</y>
     <width>95</width>
     <height>20</height>
    </rect>
   </property>
   <property name="text">
    <string>CheckBox4</string>
   </property>
  </widget>
  <widget class="QCheckBox" name="chk_1">
   <property name="geometry">
    <rect>
     <x>50</x>
     <y>100</y>
     <width>95</width>
     <height>20</height>
    </rect>
   </property>
   <property name="text">
    <string>CheckBox1</string>
   </property>
  </widget>
  <widget class="QGroupBox" name="groupBox">
   <property name="geometry">
    <rect>
     <x>190</x>
     <y>80</y>
     <width>171</width>
     <height>121</height>
    </rect>
   </property>
   <property name="title">
    <string>GroupBox</string>
   </property>
   <widget class="QCheckBox" name="groupchk_3">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>71</y>
      <width>120</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
     <string>GroupCheck3</string>
    </property>
   </widget>
   <widget class="QCheckBox" name="groupchk_1">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>29</y>
      <width>120</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
     <string>GroupCheck1</string>
    </property>
   </widget>
   <widget class="QCheckBox" name="groupchk_4">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>92</y>
      <width>120</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
     <string>GroupCheck4</string>
    </property>
   </widget>
   <widget class="QCheckBox" name="groupchk_2">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>50</y>
      <width>120</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
     <string>GroupCheck2</string>
    </property>
   </widget>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
